# fresh

./: CHANGELOG.md  Cargo.toml  fresh-vs-hunk-review-gaps.md  hunk-diff-viewer-report.md
.github/workflows/: linux-packages.yml
crates/fresh-core/src/: api.rs  hooks.rs
crates/fresh-editor/: Cargo.toml  build.rs  config.example.json
crates/fresh-editor/plugins/: audit_mode.i18n.json  audit_mode.ts  conductor.ts  config-schema.json  env-manager.i18n.json  env-manager.ts  gdscript-lsp.ts  git_log.ts  git_statusbar.ts  k8s-workspace.ts  live_diff.ts  live_grep.ts  lsp_navigation.ts  orchestrator.ts  search_replace.ts  tsconfig.json
crates/fresh-editor/plugins/lib/: finder.ts  fresh.d.ts  index.ts  widgets.ts
crates/fresh-editor/plugins/schemas/: theme.schema.json
crates/fresh-editor/queries/gdscript/: indents.scm
crates/fresh-editor/src/: config.rs  main.rs  partial_config.rs  test_api.rs  workspace.rs
crates/fresh-editor/src/app/: action_events.rs  active_focus.rs  async_dispatch.rs  async_messages.rs  bookmark_actions.rs  buffer_close.rs  buffer_config_resolve.rs  buffer_management.rs  click_handlers.rs  clipboard.rs  composite_buffer_actions.rs  conductor_persistence.rs  editor_init.rs  (+35 more)
crates/fresh-editor/tests/: eks_fake_kubectl.rs  kube_fake_kubectl.rs  orchestrator_bringup_plugin_verify.rs  orchestrator_bringup_render_verify.rs  remote_ssh_terminal.rs  ssh_attach_error.rs  workspace_virtual_buffer_clobber.rs
crates/fresh-languages/: Cargo.toml
crates/fresh-languages/queries/gdscript/: highlights.scm
crates/fresh-languages/src/: lib.rs
crates/fresh-plugin-runtime/src/: thread.rs  ts_export.rs
debian/: changelog
docs/.vitepress/: config.ts
docs/configuration/: index.md
docs/development/: adding-languages.md
docs/internal/: EKS_S3_AUTHORITY_DESIGN.md  EKS_WORKSPACE_PLUGIN_DESIGN.md  README.md  REVIEW_DIFF_HUNK_PARITY_FINDINGS.md  REVIEW_DIFF_HUNK_PARITY_UX_DESIGN.md  conductor-open-dialog-and-lifecycle.md  conductor-sessions-design.md  dock-ux-test-plan.md  global-search-ux.md  indentation-rules-design.md  language-support-review.md  orchestrator-dock-gaps.md  orchestrator-open-dialog-and-lifecycle.md  plugin-widget-library-design.md  scenario-meta-testing.md  scenario-migration-findings.md  settings-lsp-language-dialogs.md  trust-env-devcontainer-ux-plan.md
docs/plugins/development/: language-packs.md
scripts/: bump-version.py
(+166 files in other folders)
